[package]
name = "jones"
version = "0.1.1"
authors = ["Vlad Nedelcu <vlad.nedelcu@evozon.com>"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
structopt = "0.3.13"
prospector = { path = "../prospector"}
regex = "1.5.4"
